@@ -10,6 +10,7 @@ import com.jfzt.meeting.entity.MeetingRecord;
 import com.jfzt.meeting.entity.MeetingRoom;
 import com.jfzt.meeting.entity.SysUser;
 import com.jfzt.meeting.entity.dto.MeetingRoomDTO;
+import com.jfzt.meeting.entity.vo.MeetingRoomOccupancyVO;
 import com.jfzt.meeting.entity.vo.MeetingRoomStatusVO;
 import com.jfzt.meeting.entity.vo.MeetingRoomVO;
 import com.jfzt.meeting.entity.vo.TimePeriodStatusVO;
@@ -27,6 +28,7 @@ import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
@@ -47,8 +49,7 @@ import static com.jfzt.meeting.constant.TimePeriodStatusConstant.*;
  */
 @Slf4j
 @Service
-public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, MeetingRoom>
-        implements MeetingRoomService {
+public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, MeetingRoom> implements MeetingRoomService {
 
     @Resource
     private SysUserMapper sysUserMapper;
@@ -84,9 +85,9 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
     }
 
     /**
-     * 新增会议室
      * @param meetingRoom 会议室对象
      * @return {@code Integer}
+     * @description 新增会议室
      */
     @Override
     public Result<Integer> addMeetingRoom (MeetingRoom meetingRoom) {
@@ -94,15 +95,14 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
         SysUser sysUser = sysUserMapper.selectByUserId(meetingRoom.getCreatedBy());
         // 查询会议室名称,判断是否有重复的会议室名称
         List<MeetingRoom> roomList = meetingRoomMapper.selectList(new QueryWrapper<>());
-        List<String> roomName = roomList.stream().map(MeetingRoom::getRoomName).collect(Collectors.toList());
+        List<String> roomName = roomList.stream().map(MeetingRoom::getRoomName).toList();
         for (String room : roomName) {
-            if (meetingRoom.getRoomName().equals(room)){
+            if (meetingRoom.getRoomName().equals(room)) {
                 throw new RRException(ErrorCodeEnum.SERVICE_ERROR_A0421);
             }
         }
         if (MessageConstant.SUPER_ADMIN_LEVEL.equals(sysUser.getLevel()) || MessageConstant.ADMIN_LEVEL.equals(sysUser.getLevel())) {
-            if (meetingRoom.getRoomName().isEmpty() || meetingRoom.getLocation().isEmpty()
-                    || meetingRoom.getCapacity() == null){
+            if (meetingRoom.getRoomName().isEmpty() || meetingRoom.getLocation().isEmpty() || meetingRoom.getCapacity() == null) {
                 throw new RRException(ErrorCodeEnum.SERVICE_ERROR_A0410);
             }
             int result = meetingRoomMapper.insert(meetingRoom);
@@ -114,23 +114,20 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
         return Result.fail(ErrorCodeEnum.SERVICE_ERROR_A0301);
     }
 
-
-
     /**
-     * 删除会议室
      * @param id 会议室id
      * @return {@code Integer}
+     * @description 删除会议室
      */
     @Override
     public Result<Integer> deleteMeetingRoom (Long id, Integer currentLevel) {
-        if (MessageConstant.SUPER_ADMIN_LEVEL.equals(currentLevel) ||
-                MessageConstant.ADMIN_LEVEL.equals(currentLevel)) {
+        if (MessageConstant.SUPER_ADMIN_LEVEL.equals(currentLevel) || MessageConstant.ADMIN_LEVEL.equals(currentLevel)) {
             // 删除会议室
             if (id != null) {
                 int result = meetingRoomMapper.deleteById(id);
                 if (result > 0) {
                     return Result.success(result);
-                }else {
+                } else {
                     throw new RRException(ErrorCodeEnum.SYSTEM_ERROR_B0001);
                 }
             } else {
@@ -142,12 +139,10 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
     }
 
 
-
-
     /**
-     * 修改会议室状态
      * @param meetingRoomDTO 会议室DTO对象
      * @return com.jfzt.meeting.common.Result<java.lang.Integer>
+     * @description 修改会议室状态
      */
     @Override
     public Result<Integer> updateStatus (MeetingRoomDTO meetingRoomDTO) {
@@ -157,12 +152,11 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
             log.error(UPDATE_FAIL + EXCEPTION_TYPE, RRException.class);
             throw new RRException(UPDATE_FAIL, ErrorCodeEnum.SERVICE_ERROR_A0421.getCode());
         }
-        if (meetingRoomDTO.getStatus() == null || meetingRoomDTO.getCurrentLevel() == null){
+        if (meetingRoomDTO.getStatus() == null || meetingRoomDTO.getCurrentLevel() == null) {
             throw new RRException(ErrorCodeEnum.SERVICE_ERROR_A0410);
         }
         // 获取当前登录用户的权限等级
-        if (MessageConstant.SUPER_ADMIN_LEVEL.equals(meetingRoomDTO.getCurrentLevel()) ||
-                MessageConstant.ADMIN_LEVEL.equals(meetingRoomDTO.getCurrentLevel())) {
+        if (MessageConstant.SUPER_ADMIN_LEVEL.equals(meetingRoomDTO.getCurrentLevel()) || MessageConstant.ADMIN_LEVEL.equals(meetingRoomDTO.getCurrentLevel())) {
             int row = meetingRoomMapper.updateStatus(meetingRoomDTO.getId(), meetingRoomDTO.getStatus());
             if (row > 0) {
                 return Result.success(row);
@@ -174,38 +168,99 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
     }
 
     /**
-     * 查询被禁用的会议室的id
      * @param currentLevel 当前登录用户的权限等级
      * @return com.jfzt.meeting.common.Result<java.util.List < < java.lang.Integer>>
+     * @description 查询被禁用的会议室的id
      */
     @Override
     public Result<List<Long>> selectUsableRoom (Integer currentLevel) {
         if (MessageConstant.SUPER_ADMIN_LEVEL.equals(currentLevel) || MessageConstant.ADMIN_LEVEL.equals(currentLevel)) {
             List<MeetingRoom> roomList = meetingRoomMapper.selectList(new QueryWrapper<>());
-            List<Long> collect = roomList.stream()
-                    .filter(room -> MEETINGROOM_STATUS_PAUSE.equals(room.getStatus()))
+            List<Long> collect = roomList.stream().filter(
+                            room -> MEETINGROOM_STATUS_PAUSE.equals(room.getStatus()))
                     .map(MeetingRoom::getId)
                     .collect(Collectors.toList());
             return Result.success(collect);
         }
         throw new RRException(ErrorCodeEnum.SERVICE_ERROR_A0301);
-
     }
 
 
     /**
-     * 查询会议室状态
-     *
+     * @return {@code Result<List<MeetingRoomOccupancyVO>>}
+     * @description 查询近七天会议室占用率（9：00-18：00）不包括周末
+     */
+    @Override
+    public Result<List<MeetingRoomOccupancyVO>> getAllMeetingRoomOccupancy () {
+        List<MeetingRoom> meetingRooms = this.list(new LambdaQueryWrapper<MeetingRoom>()
+                .eq(MeetingRoom::getStatus, MEETINGROOM_STATUS_AVAILABLE));
+
+        //查出七日内所有会议
+        List<MeetingRecord> meetingRecordList = meetingRecordService.list(new LambdaQueryWrapper<MeetingRecord>()
+                .lt(MeetingRecord::getStartTime, LocalDateTime.now().toLocalDate().atStartOfDay().minusDays(7))
+                .gt(MeetingRecord::getEndTime, LocalDateTime.now().toLocalDate().atStartOfDay())
+                .eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_NOT_START)
+                .or().eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_PROCESSING)
+                .or().eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_END));
+        //遍历会议室
+        List<MeetingRoomOccupancyVO> meetingRoomOccupancyVOList = meetingRooms.stream().map(meetingRoom -> {
+            //被占用的时间段总数
+            long count = 0;
+            //统计前七天，九点开始，十八点结束，半小时为一段
+            LocalDateTime startTime = LocalDateTime.now().toLocalDate().atStartOfDay().plusHours(9).minusDays(7);
+            LocalDateTime endTime = startTime.plusMinutes(30);
+            //遍历七天
+            for (int i = 0; i < 7; i++) {
+                // 跳过周末
+                if (startTime.toLocalDate().getDayOfWeek() == DayOfWeek.SATURDAY || startTime.toLocalDate().getDayOfWeek() == DayOfWeek.SUNDAY) {
+                    startTime = startTime.plusDays(1);
+                    endTime = endTime.plusDays(1);
+                }
+                log.info("第{}天,startTime:{}" + "endTime:{}", i + 1, startTime, endTime);
+                //每天18个时间段
+                for (int j = 0; j < 18; j++) {
+                    LocalDateTime finalStartTime = startTime;
+                    LocalDateTime finalEndTime = endTime;
+                    count = count + meetingRecordList.stream().filter(record -> {
+                        //开始时间在时间段内 前含后不含  8-9 属于8-8.5不属于7.5-8
+                        return Objects.equals(record.getMeetingRoomId(), meetingRoom.getId())
+                                && (record.getStartTime().isAfter(finalStartTime.minusSeconds(1)) && record.getStartTime().isBefore(finalEndTime)
+                                //结束时间在时间段内 前不含后含  8-9属于8.5-9不属于9-9.5
+                                || record.getEndTime().isAfter(finalStartTime) && record.getEndTime().isBefore(finalEndTime.plusSeconds(1))
+                                //时间段包含在开始时间(含)和结束时间(含)之间    8-9 属于8-8.5属于8.5-9
+                                || record.getStartTime().isBefore(finalStartTime.plusSeconds(1)) && record.getEndTime().isAfter(finalEndTime.minusSeconds(1)));
+                    }).count();
+                    //被占用，总数加
+                    log.info("时间段：{}--{},count:{}", startTime, endTime, count);
+                    //下一时间段
+                    startTime = startTime.plusMinutes(30);
+                    endTime = endTime.plusMinutes(30);
+                }
+                //下一天
+                startTime = startTime.plusHours(15);
+                endTime = startTime.plusMinutes(30);
+            }
+            MeetingRoomOccupancyVO meetingRoomOccupancyVO = new MeetingRoomOccupancyVO();
+            meetingRoomOccupancyVO.setOccupied(count);
+            meetingRoomOccupancyVO.setTotal((long) (7 * 18));
+            meetingRoomOccupancyVO.setId(meetingRoom.getId());
+            meetingRoomOccupancyVO.setName(meetingRoom.getRoomName());
+            return meetingRoomOccupancyVO;
+        }).sorted((o1, o2) -> Math.toIntExact(o2.getOccupied() - o1.getOccupied())).collect(Collectors.toList());
+        return Result.success(meetingRoomOccupancyVOList);
+    }
+
+
+    /**
      * @return {@code Result<List<MeetingRoomStatusVO>>}
+     * @description 查询会议室状态
      */
     @Override
     public List<MeetingRoomStatusVO> getMeetingRoomStatus () {
         //查询当前时间段会议室的使用信息,当前时间在开始或结束区间内的会议,填充到会议室VO,不更新会议室,状态只有01
         //查询所有会议室
-        List<MeetingRoom> meetingRoomList = list(
-                new LambdaQueryWrapper<MeetingRoom>()
-                        .eq(MeetingRoom::getIsDeleted, NOT_DELETED)
-                        .orderByAsc(MeetingRoom::getId));
+        List<MeetingRoom> meetingRoomList = list(new LambdaQueryWrapper<MeetingRoom>()
+                .eq(MeetingRoom::getIsDeleted, NOT_DELETED).orderByAsc(MeetingRoom::getId));
 
         return meetingRoomList.stream().map(meetingRoom -> {
             MeetingRoomStatusVO meetingRoomStatusVO = new MeetingRoomStatusVO();
@@ -216,8 +271,7 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
                 return meetingRoomStatusVO;
             }
             LambdaQueryWrapper<MeetingRecord> recordQueryWrapper = new LambdaQueryWrapper<>();
-            recordQueryWrapper
-                    .lt(MeetingRecord::getStartTime, LocalDateTime.now())
+            recordQueryWrapper.lt(MeetingRecord::getStartTime, LocalDateTime.now())
                     .gt(MeetingRecord::getEndTime, LocalDateTime.now())
                     .eq(MeetingRecord::getMeetingRoomId, meetingRoom.getId());
             recordQueryWrapper.and(wrapper -> wrapper.eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_NOT_START)
@@ -252,9 +306,8 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
     }
 
     /**
-     * 查询当天各个时间段会议室占用情况
-     *
      * @return {@code List<Integer>}
+     * @description 查询当天各个时间段会议室占用情况
      */
     @Override
     public List<Integer> getTodayTimePeriodStatus () {
@@ -284,17 +337,16 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
                         //结束时间在时间段内 前不含后含  8-9属于8.5-9不属于9-9.5
                         .or().between(MeetingRecord::getEndTime, finalStartTime2, finalEndTime1)
                         //时间段包含在开始时间(含)和结束时间(含)之间    8-9 属于8-8.5属于8.5-9
-                        .or().lt(MeetingRecord::getStartTime, finalStartTime2).gt(MeetingRecord::getEndTime, finalEndTime2));
+                        .or().lt(MeetingRecord::getStartTime, finalStartTime2)
+                        .gt(MeetingRecord::getEndTime, finalEndTime2));
 
                 //没有逻辑删除
-                recordQueryWrapper
-                        .and(recordQueryWrapper1 ->
-                                recordQueryWrapper1.eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_NOT_START)
-                                        .or().eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_PROCESSING));
+                recordQueryWrapper.and(recordQueryWrapper1 -> recordQueryWrapper1
+                        .eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_NOT_START)
+                        .or().eq(MeetingRecord::getStatus, MEETING_RECORD_STATUS_PROCESSING));
                 List<MeetingRecord> meetingRecords = meetingRecordService.list(recordQueryWrapper);
                 //根据会议室id收集获得占用不同会议室的数量
-                long size = meetingRecords.stream().collect(Collectors.groupingBy(MeetingRecord::getMeetingRoomId))
-                        .size();
+                long size = meetingRecords.stream().collect(Collectors.groupingBy(MeetingRecord::getMeetingRoomId)).size();
                 //获取可使用的会议室总数
                 long count = this.count(new LambdaQueryWrapper<MeetingRoom>()
                         .eq(MeetingRoom::getIsDeleted, NOT_DELETED)
@@ -315,11 +367,10 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
     }
 
     /**
-     * 查询指定会议室当天各个时间段占用情况
-     *
      * @param id   会议室id
      * @param date 日期
      * @return {@code Result<List<TimePeriodStatusVO>>}
+     * @description 查询指定会议室当天各个时间段占用情况
      */
     @Override
     public Result<List<TimePeriodStatusVO>> getTimePeriodStatusByIdAndDate (Long id, LocalDate date) {
@@ -345,14 +396,14 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
                         .or().eq(MeetingRecord::getStatus, MeetingRecordStatusConstant.MEETING_RECORD_STATUS_PROCESSING));
                 LocalDateTime finalStartTime = startTime;
                 LocalDateTime finalEndTime = endTime;
-                recordQueryWrapper
-                        .and(wrapper -> wrapper
-                                //开始时间在时间段内 前含后不含  8-9 属于8-8.5不属于7.5-8
-                                .between(MeetingRecord::getStartTime, finalStartTime, finalEndTime.minusSeconds(1))
-                                //结束时间在时间段内 前不含后含  8-9属于8.5-9不属于9-9.5
-                                .or().between(MeetingRecord::getEndTime, finalStartTime.plusSeconds(1), finalEndTime)
-                                //时间段包含在开始时间(含)和结束时间(含)之间    8-9 属于8-8.5属于8.5-9
-                                .or().lt(MeetingRecord::getStartTime, finalStartTime.plusSeconds(1)).gt(MeetingRecord::getEndTime, finalEndTime.minusSeconds(1)));
+                recordQueryWrapper.and(wrapper -> wrapper
+                        //开始时间在时间段内 前含后不含  8-9 属于8-8.5不属于7.5-8
+                        .between(MeetingRecord::getStartTime, finalStartTime, finalEndTime.minusSeconds(1))
+                        //结束时间在时间段内 前不含后含  8-9属于8.5-9不属于9-9.5
+                        .or().between(MeetingRecord::getEndTime, finalStartTime.plusSeconds(1), finalEndTime)
+                        //时间段包含在开始时间(含)和结束时间(含)之间    8-9 属于8-8.5属于8.5-9
+                        .or().lt(MeetingRecord::getStartTime, finalStartTime.plusSeconds(1))
+                        .gt(MeetingRecord::getEndTime, finalEndTime.minusSeconds(1)));
                 List<MeetingRecord> meetingRecords = meetingRecordService.list(recordQueryWrapper);
                 //判断是否被占用
                 if (!meetingRecords.isEmpty()) {
@@ -381,11 +432,10 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
     }
 
     /**
-     * 根据时间段获取可用的会议室
-     *
      * @param startTime 开始时间
      * @param endTime   结束时间
      * @return {@code Result<List<MeetingRoomVO>>}
+     * @description 根据时间段获取可用的会议室
      */
     @Override
     public Result<List<MeetingRoomVO>> getAvailableMeetingRooms (LocalDateTime startTime, LocalDateTime endTime) {
@@ -393,14 +443,14 @@ public class MeetingRoomServiceImpl extends ServiceImpl<MeetingRoomMapper, Meeti
         LambdaQueryWrapper<MeetingRecord> queryWrapper = new LambdaQueryWrapper<>();
         queryWrapper.notIn(MeetingRecord::getStatus, MEETING_RECORD_STATUS_CANCEL);
         //开始时间或结束时间在时间段内 或 开始时间与结束时间之间包含时间段
-        queryWrapper.and(recordQueryWrapper ->
-                recordQueryWrapper
-                        //开始时间在时间段内 前含后不含  8-9 属于8-8.5不属于7.5-8
-                        .between(MeetingRecord::getStartTime, startTime, endTime.minusSeconds(1))
-                        //结束时间在时间段内 前不含后含  8-9属于8.5-9不属于9-9.5
-                        .or().between(MeetingRecord::getEndTime, startTime.plusSeconds(1), endTime)
-                        //时间段包含在开始时间(含)和结束时间(含)之间    8-9 属于8-8.5属于8.5-9
-                        .or().lt(MeetingRecord::getStartTime, startTime.plusSeconds(1)).gt(MeetingRecord::getEndTime, endTime.minusSeconds(1)));
+        queryWrapper.and(recordQueryWrapper -> recordQueryWrapper
+                //开始时间在时间段内 前含后不含  8-9 属于8-8.5不属于7.5-8
+                .between(MeetingRecord::getStartTime, startTime, endTime.minusSeconds(1))
+                //结束时间在时间段内 前不含后含  8-9属于8.5-9不属于9-9.5
+                .or().between(MeetingRecord::getEndTime, startTime.plusSeconds(1), endTime)
+                //时间段包含在开始时间(含)和结束时间(含)之间    8-9 属于8-8.5属于8.5-9
+                .or().lt(MeetingRecord::getStartTime, startTime.plusSeconds(1))
+                .gt(MeetingRecord::getEndTime, endTime.minusSeconds(1)));
         List<MeetingRecord> meetingRecords = meetingRecordService.list(queryWrapper);
         List<MeetingRoom> meetingRooms = this.list(new LambdaQueryWrapper<MeetingRoom>()
                 .notIn(MeetingRoom::getStatus, MEETINGROOM_STATUS_PAUSE));
